--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ div {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid #ffffff;
-    border-top: 2px solid #ffffff;
+    border-right: 5px;
+    border-top: 2px;
     color: #c4c4c4;
 }
 
