--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,7 @@ body {
     font-family: 'Arial', Verdana, sans-serif;
     background-color: #000000;
     color: #ffffff;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 20px 20px 20px 0px;
 }
 
 h1 {
@@ -47,16 +45,14 @@ div {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-left-width: 5px;
-    border-bottom-width: 2px;
+    border-width: 0px 0px 2px 5px;
 }
 
 .blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-width: 2px 5px 0px 0px;
     color: #c4c4c4;
 }
 
@@ -68,8 +64,7 @@ div {
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
+    border-width: 0px 0px 2px 5px;
 }
 
 .yellow p {
@@ -80,8 +75,7 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-width: 2px 5px 0px 0px;
 }
 
 footer {
@@ -92,8 +86,6 @@ footer {
 footer p {
     font-size: 20px;
     text-align: right;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 15px 15px 15px 0px;
     color: #ffffff;
 }
