--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
-    font-family: 'Arial', Verdana, sans-serif;
+    font-family: 'Arial', Verdana;
     background-color: #000000;
     color: #ffffff;
-    margin: 20px 20px 20px 0px;
+    margin: 20px 20px 0px 20px;
 }
 
 h1 {
