--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -16,12 +16,11 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 20px 20px 20px 0px;
+	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	font-family: 'Arial', Verdana, sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
